--- a/teleflip.html
+++ b/teleflip.html
@@ -7,28 +7,70 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100vh; /* full viewport height */
+      height: 100vh;
       overflow: hidden;
+      background: black;
     }
+
     iframe {
       width: 100%;
-      height: 100vh; /* full viewport height */
+      height: 100vh;
       border: none;
       display: block;
-      transition: opacity 1s ease-in-out; /* fade effect */
+      transition: opacity 1s ease-in-out;
       opacity: 1;
     }
+
     .hidden {
       opacity: 0;
+    }
+
+    /* Overlay for the image + title */
+    #imageOverlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 10;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      color: white;
+    }
+
+    #imageOverlay img {
+      max-width: 70%;
+      height: auto;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+    }
+
+    #imageOverlay h1 {
+      font-size: 2em;
+      color: #00ffcc;
+      text-align: center;
+      margin: 0;
     }
   </style>
 </head>
 <body>
-  <!-- iFrame to load dashboards -->
+
+  <!-- Dashboard container -->
   <iframe id="dashboardFrame" src=""></iframe>
 
+  <!-- Image + title overlay -->
+  <div id="imageOverlay">
+    <img src="Logo_Title.jpg" alt="Telesales Performance">
+    <h1 id="overlayTitle"></h1>
+  </div>
+
   <script>
-    // Dashboards to rotate
     const dashboards = [
       "BB_Telesales_Statistics.html",
       "Telesales_Statistics.html"
@@ -36,50 +78,53 @@
 
     let index = 0;
     const frame = document.getElementById("dashboardFrame");
+    const overlay = document.getElementById("imageOverlay");
+    const overlayTitle = document.getElementById("overlayTitle");
 
-    // Load a dashboard with cache-busting timestamp
+    // Load dashboard with cache busting
     function loadDashboard(i) {
       frame.src = dashboards[i] + "?v=" + new Date().getTime();
     }
 
-    // Rotate dashboards with flower transition
-function rotateDashboard() {
-  // Hide the current dashboard
-  frame.classList.add("hidden"); // fade out
+    // Replace flower animation with image overlay
+    function rotateDashboard() {
+      frame.classList.add("hidden"); // fade out current dashboard
 
-  // Show flower animation overlay
-  const flower = document.createElement("div");
-  flower.classList.add("flower-animation"); // CSS will define the flowers
-  document.body.appendChild(flower);
+      // Show the image overlay instead of flowers
+      const now = new Date();
+      const formattedTime = now.toLocaleString();
+      overlayTitle.textContent = `Telesales Performance as at ${formattedTime}  |  # OPERATION NIGHT HAMMER`;
 
-  // Wait for the animation duration
-  setTimeout(() => {
-    // Remove flower animation
-    document.body.removeChild(flower);
+      overlay.style.display = "flex";
+      requestAnimationFrame(() => { overlay.style.opacity = 1; }); // fade in
 
-    // Load next dashboard
-    index = (index + 1) % dashboards.length;
-    loadDashboard(index);
+      // Keep the image visible for 30 seconds
+      setTimeout(() => {
+        overlay.style.opacity = 0; // fade out image
+        setTimeout(() => {
+          overlay.style.display = "none"; // hide it completely
+          index = (index + 1) % dashboards.length;
+          loadDashboard(index);
+          frame.classList.remove("hidden"); // fade in new dashboard
+        }, 1000);
+      }, 30000); // 30 seconds display
+    }
 
-    // Show dashboard again
-    frame.classList.remove("hidden"); // fade in
-  }, 3000); // 3 seconds for flower animation
-}
-
-
-    // Auto-refresh current dashboard (even without flipping)
+    // Refresh the current dashboard
     function refreshDashboard() {
       loadDashboard(index);
     }
 
-    // ---- Init ----
+    // Initialize
     loadDashboard(index);
 
-    // Rotate dashboards every 2 minutes (120,000 ms)
+    // Rotate dashboards every 2 minutes (first rotation after 2 min)
     setInterval(rotateDashboard, 120000);
 
-    // Refresh current dashboard every 1 minutes (60,000 ms)
+    // Refresh every 1 minute
     setInterval(refreshDashboard, 60000);
   </script>
+
 </body>
 </html>
+
