--- a/teleflip.html
+++ b/teleflip.html
@@ -67,7 +67,7 @@
   <!-- Image + title overlay -->
   <div id="imageOverlay">
     <!-- ✅ Use the direct GitHub Pages URL for your image -->
-    <img src="https://faithnaliaka.github.io/Tellesales-Dashboard/Logo_Title.jpg" alt="Telesales Performance">
+    <img src="https://bestcoder-123.github.io/Tellesales-Dashboard/Logo_Title.jpg" alt="Telesales Performance">
     <h1 id="overlayTitle"></h1>
   </div>
 
@@ -136,3 +136,4 @@
 
 </body>
 </html>
+
