--- a/teleflip.html
+++ b/teleflip.html
@@ -127,13 +127,14 @@
     // Initialize
     loadDashboard(index);
 
-    // Rotate dashboards every 2 minutes
-    setInterval(rotateDashboard, 120000);
+    // Rotate dashboards every 30 seconds
+    setInterval(rotateDashboard, 30000);
 
-    // Refresh current dashboard every 1 minute
-    setInterval(refreshDashboard, 60000);
+    // Refresh current dashboard every 30seconds
+    setInterval(refreshDashboard, 30000);
   </script>
 
 </body>
 </html>
+
 
