--- a/teleflip.html
+++ b/teleflip.html
@@ -10,6 +10,7 @@
       height: 100vh;
       overflow: hidden;
       background: black;
+      font-family: Arial, sans-serif;
     }
 
     iframe {
@@ -25,7 +26,7 @@
       opacity: 0;
     }
 
-    /* Overlay for the image + title */
+    /* Overlay for image + title */
     #imageOverlay {
       position: fixed;
       top: 0;
@@ -36,26 +37,33 @@
       display: none;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start; /* keep title on top */
       z-index: 10;
       opacity: 0;
       transition: opacity 1s ease-in-out;
       color: white;
     }
 
-    #imageOverlay img {
-      max-width: 70%;
-      height: auto;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-    }
-
+    /* Title styling */
     #imageOverlay h1 {
       font-size: 2em;
       color: #00ffcc;
       text-align: center;
-      margin: 0;
+      margin: 20px 0;
+      z-index: 2;
+      text-shadow: 2px 2px 10px black;
+    }
+
+    /* Fullscreen image */
+    #imageOverlay img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* fill the screen, maintain ratio */
+      z-index: 1;
+      opacity: 0.8; /* slightly dimmed so text stands out */
     }
   </style>
 </head>
@@ -66,8 +74,9 @@
 
   <!-- Image + title overlay -->
   <div id="imageOverlay">
-    <!-- ✅ Use the direct GitHub Pages URL for your image -->
+    <!-- Fullscreen image -->
     <img src="https://bestcoder-123.github.io/Tellesales-Dashboard/Logo_Title.jpg" alt="Telesales Performance">
+    <!-- Title on top -->
     <h1 id="overlayTitle"></h1>
   </div>
 
@@ -89,9 +98,9 @@
 
     // Show image overlay between flips
     function rotateDashboard() {
-      frame.classList.add("hidden"); // fade out current dashboard
+      frame.classList.add("hidden");
 
-      // Display image overlay instead of flower animation
+      // Update title with current time
       const now = new Date();
       const formattedTime = now.toLocaleString('en-GB', {
         day: '2-digit',
@@ -104,19 +113,20 @@
       
       overlayTitle.textContent = `TELESALES PERFORMANCE AS AT ${formattedTime}  |  # OPERATION NIGHT HAMMER`;
 
+      // Show overlay
       overlay.style.display = "flex";
-      requestAnimationFrame(() => { overlay.style.opacity = 1; }); // fade in overlay
+      requestAnimationFrame(() => { overlay.style.opacity = 1; });
 
       // Keep the image visible for 30 seconds
       setTimeout(() => {
-        overlay.style.opacity = 0; // fade out
+        overlay.style.opacity = 0;
         setTimeout(() => {
-          overlay.style.display = "none"; // hide overlay
+          overlay.style.display = "none";
           index = (index + 1) % dashboards.length;
           loadDashboard(index);
-          frame.classList.remove("hidden"); // fade in next dashboard
+          frame.classList.remove("hidden");
         }, 1000);
-      }, 30000); // 30 seconds display
+      }, 30000);
     }
 
     // Refresh current dashboard
@@ -130,11 +140,9 @@
     // Rotate dashboards every 30 seconds
     setInterval(rotateDashboard, 30000);
 
-    // Refresh current dashboard every 30seconds
+    // Refresh current dashboard every 30 seconds
     setInterval(refreshDashboard, 30000);
   </script>
 
 </body>
 </html>
-
-
