--- a/teleflip.html
+++ b/teleflip.html
@@ -18,15 +18,29 @@
       height: 100vh;
       border: none;
       display: block;
-      transition: opacity 1s ease-in-out;
-      opacity: 1;
-    }
-
-    .hidden {
+      position: absolute;
+      top: 0;
+      left: 0;
       opacity: 0;
+      transition: transform 1s ease-in-out, opacity 1s ease-in-out;
     }
 
-    /* Overlay for image + title */
+    iframe.active {
+      opacity: 1;
+      transform: translateX(0);
+      z-index: 1;
+    }
+
+    /* transition effects */
+    .slide-in-right { transform: translateX(100%); }
+    .slide-in-left  { transform: translateX(-100%); }
+    .slide-in-top   { transform: translateY(-100%); }
+    .slide-in-bottom{ transform: translateY(100%); }
+    .fade-in        { opacity: 0; }
+    .zoom-in        { transform: scale(0.8); opacity: 0; }
+    .rotate-in      { transform: rotateY(90deg); opacity: 0; }
+
+    /* Overlay for banner */
     #imageOverlay {
       position: fixed;
       top: 0;
@@ -37,70 +51,92 @@
       display: none;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start; /* keep title on top */
+      justify-content: flex-start;
       z-index: 10;
       opacity: 0;
       transition: opacity 1s ease-in-out;
       color: white;
     }
 
-    /* Title styling */
-    #imageOverlay h1 {
-      font-size: 2em;
-      color: #00ffcc;
+    /* Banner header with styled background */
+    #imageOverlay header {
+      width: 100%;
+      background: linear-gradient(90deg, #001f1f, #004d4d);
+      padding: 20px;
       text-align: center;
-      margin: 20px 0;
-      z-index: 2;
+      font-size: 2em;
+      font-weight: bold;
+      color: #00ffcc;
       text-shadow: 2px 2px 10px black;
+      z-index: 2;
+      border-bottom: 3px solid #00ffcc;
     }
 
-    /* Fullscreen image */
+    /* Fullscreen background image */
     #imageOverlay img {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover; /* fill the screen, maintain ratio */
+      object-fit: cover;
       z-index: 1;
-      opacity: 0.8; /* slightly dimmed so text stands out */
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
 
   <!-- Dashboard container -->
-  <iframe id="dashboardFrame" src=""></iframe>
+  <iframe id="dashboardFrame"></iframe>
 
   <!-- Image + title overlay -->
   <div id="imageOverlay">
-    <!-- Fullscreen image -->
     <img src="https://bestcoder-123.github.io/Tellesales-Dashboard/Logo_Title.jpg" alt="Telesales Performance">
-    <!-- Title on top -->
-    <h1 id="overlayTitle"></h1>
+    <header id="overlayTitle"></header>
   </div>
 
   <script>
     const dashboards = [
-      "BB_Telesales_Statistics.html",
-      "Telesales_Statistics.html"
+      { url: "BB_Telesales_Statistics.html", duration: 120000 }, 
+      { url: "Telesales_Statistics.html", duration: 180000 }
+    ];
+
+    const transitions = [
+      "slide-in-right",
+      "slide-in-left",
+      "slide-in-top",
+      "slide-in-bottom",
+      "fade-in",
+      "zoom-in",
+      "rotate-in"
     ];
 
     let index = 0;
     const frame = document.getElementById("dashboardFrame");
     const overlay = document.getElementById("imageOverlay");
     const overlayTitle = document.getElementById("overlayTitle");
+    let rotationTimer;
 
-    // Load dashboard with cache busting
-    function loadDashboard(i) {
-      frame.src = dashboards[i] + "?v=" + new Date().getTime();
+    function randomTransition() {
+      const rand = Math.floor(Math.random() * transitions.length);
+      return transitions[rand];
     }
 
-    // Show image overlay between flips
-    function rotateDashboard() {
-      frame.classList.add("hidden");
+    function loadDashboard(i, transition) {
+      frame.src = dashboards[i].url + "?v=" + new Date().getTime();
 
-      // Update title with current time
+      // Reset classes for transition
+      frame.className = transition;
+      void frame.offsetWidth; // force reflow
+      frame.classList.add("active");
+    }
+
+    function rotateDashboard() {
+      // Hide dashboard
+      frame.classList.remove("active");
+
+      // Update header with current time
       const now = new Date();
       const formattedTime = now.toLocaleString('en-GB', {
         day: '2-digit',
@@ -111,37 +147,33 @@
         second: '2-digit'
       }).replace(',', '');
       
-      overlayTitle.textContent = `TELESALES PERFORMANCE AS AT ${formattedTime}  |  # OPERATION NIGHT HAMMER`;
+      overlayTitle.textContent = TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER;
 
-      // Show overlay
+      // Show overlay banner
       overlay.style.display = "flex";
       requestAnimationFrame(() => { overlay.style.opacity = 1; });
 
-      // Keep the image visible for 30 seconds
+      // Keep overlay for 30 seconds
       setTimeout(() => {
         overlay.style.opacity = 0;
         setTimeout(() => {
           overlay.style.display = "none";
           index = (index + 1) % dashboards.length;
-          loadDashboard(index);
-          frame.classList.remove("hidden");
+
+          const transition = randomTransition();
+          loadDashboard(index, transition);
+
+          // Schedule next rotation AFTER dashboard duration
+          clearTimeout(rotationTimer);
+          rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
+
         }, 1000);
       }, 30000);
     }
 
-    // Refresh current dashboard
-    function refreshDashboard() {
-      loadDashboard(index);
-    }
-
     // Initialize
-    loadDashboard(index);
-
-    // Rotate dashboards every 30 seconds
-    setInterval(rotateDashboard, 30000);
-
-    // Refresh current dashboard every 30 seconds
-    setInterval(refreshDashboard, 30000);
+    loadDashboard(index, randomTransition());
+    rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
   </script>
 
 </body>
