--- a/teleflip.html
+++ b/teleflip.html
@@ -7,174 +7,79 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100vh;
+      height: 100vh; /* full viewport height */
       overflow: hidden;
-      background: black;
-      font-family: Arial, sans-serif;
     }
-
     iframe {
       width: 100%;
-      height: 100vh;
+      height: 100vh; /* full viewport height */
       border: none;
       display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      transition: transform 1s ease-in-out, opacity 1s ease-in-out;
-    }
-
-    iframe.active {
+      transition: opacity 1s ease-in-out; /* fade effect */
       opacity: 1;
-      transform: translateX(0);
-      z-index: 1;
     }
-
-    /* transition effects */
-    .slide-in-right { transform: translateX(100%); }
-    .slide-in-left  { transform: translateX(-100%); }
-    .slide-in-top   { transform: translateY(-100%); }
-    .slide-in-bottom{ transform: translateY(100%); }
-    .fade-in        { opacity: 0; }
-    .zoom-in        { transform: scale(0.8); opacity: 0; }
-    .rotate-in      { transform: rotateY(90deg); opacity: 0; }
-
-    /* Overlay for banner */
-    #imageOverlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: black;
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      z-index: 10;
+    .hidden {
       opacity: 0;
-      transition: opacity 1s ease-in-out;
-      color: white;
-    }
-
-    /* Banner header with styled background */
-    #imageOverlay header {
-      width: 100%;
-      background: linear-gradient(90deg, #001f1f, #004d4d);
-      padding: 20px;
-      text-align: center;
-      font-size: 2em;
-      font-weight: bold;
-      color: #00ffcc;
-      text-shadow: 2px 2px 10px black;
-      z-index: 2;
-      border-bottom: 3px solid #00ffcc;
-    }
-
-    /* Fullscreen background image */
-    #imageOverlay img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: 1;
-      opacity: 0.8;
     }
   </style>
 </head>
 <body>
-
-  <!-- Dashboard container -->
-  <iframe id="dashboardFrame"></iframe>
-
-  <!-- Image + title overlay -->
-  <div id="imageOverlay">
-    <img src="https://bestcoder-123.github.io/Tellesales-Dashboard/Logo_Title.jpg" alt="Telesales Performance">
-    <header id="overlayTitle"></header>
-  </div>
+  <!-- iFrame to load dashboards -->
+  <iframe id="dashboardFrame" src=""></iframe>
 
   <script>
+    // Dashboards to rotate
     const dashboards = [
-      { url: "BB_Telesales_Statistics.html", duration: 120000 }, 
-      { url: "Telesales_Statistics.html", duration: 180000 }
-    ];
-
-    const transitions = [
-      "slide-in-right",
-      "slide-in-left",
-      "slide-in-top",
-      "slide-in-bottom",
-      "fade-in",
-      "zoom-in",
-      "rotate-in"
+      "BB_Telesales_Statistics.html",
+      "Telesales_Statistics.html"
     ];
 
     let index = 0;
     const frame = document.getElementById("dashboardFrame");
-    const overlay = document.getElementById("imageOverlay");
-    const overlayTitle = document.getElementById("overlayTitle");
-    let rotationTimer;
 
-    function randomTransition() {
-      const rand = Math.floor(Math.random() * transitions.length);
-      return transitions[rand];
+    // Load a dashboard with cache-busting timestamp
+    function loadDashboard(i) {
+      frame.src = dashboards[i] + "?v=" + new Date().getTime();
     }
 
-    function loadDashboard(i, transition) {
-      frame.src = dashboards[i].url + "?v=" + new Date().getTime();
+    // Rotate dashboards with flower transition
+function rotateDashboard() {
+  // Hide the current dashboard
+  frame.classList.add("hidden"); // fade out
 
-      // Reset classes for transition
-      frame.className = transition;
-      void frame.offsetWidth; // force reflow
-      frame.classList.add("active");
+  // Show flower animation overlay
+  const flower = document.createElement("div");
+  flower.classList.add("flower-animation"); // CSS will define the flowers
+  document.body.appendChild(flower);
+
+  // Wait for the animation duration
+  setTimeout(() => {
+    // Remove flower animation
+    document.body.removeChild(flower);
+
+    // Load next dashboard
+    index = (index + 1) % dashboards.length;
+    loadDashboard(index);
+
+    // Show dashboard again
+    frame.classList.remove("hidden"); // fade in
+  }, 3000); // 3 seconds for flower animation
+}
+
+
+    // Auto-refresh current dashboard (even without flipping)
+    function refreshDashboard() {
+      loadDashboard(index);
     }
 
-    function rotateDashboard() {
-      // Hide dashboard
-      frame.classList.remove("active");
+    // ---- Init ----
+    loadDashboard(index);
 
-      // Update header with current time
-      const now = new Date();
-      const formattedTime = now.toLocaleString('en-GB', {
-        day: '2-digit',
-        month: 'short',
-        year: 'numeric',
-        hour: '2-digit',
-        minute: '2-digit',
-        second: '2-digit'
-      }).replace(',', '');
-      
-      overlayTitle.textContent = TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER;
+    // Rotate dashboards every 2 minutes (120,000 ms)
+    setInterval(rotateDashboard, 120000);
 
-      // Show overlay banner
-      overlay.style.display = "flex";
-      requestAnimationFrame(() => { overlay.style.opacity = 1; });
-
-      // Keep overlay for 30 seconds
-      setTimeout(() => {
-        overlay.style.opacity = 0;
-        setTimeout(() => {
-          overlay.style.display = "none";
-          index = (index + 1) % dashboards.length;
-
-          const transition = randomTransition();
-          loadDashboard(index, transition);
-
-          // Schedule next rotation AFTER dashboard duration
-          clearTimeout(rotationTimer);
-          rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
-
-        }, 1000);
-      }, 30000);
-    }
-
-    // Initialize
-    loadDashboard(index, randomTransition());
-    rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
+    // Refresh current dashboard every 1 minutes (60,000 ms)
+    setInterval(refreshDashboard, 60000);
   </script>
-
 </body>
 </html>
